...
        ref={dialog => { this.skipDialog = dialog; }}
        date={this.state.lastDeliveryPopup.date}
        onSkip={date => this._onSkipConfirmed(date)} />)
      : null;

    return (
      <View testID='CalendarTestid' style={Res.Styles.safeAreaTop}>
        <View style={styles.rootContainer}>
          {list}
          {message}
          {progress}
          {skipDialog}
        </View>
...
